force-app/main/default/objects/Session_Status__c/Session_Status__c.object-meta.xml
<CustomObject>
    <description>A student&apos;s status in a session</description>
    <label>Session Status</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Status No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>