force-app/main/default/objects/Session_Status__c/fields/Class_Reg__c.field-meta.xml
<CustomField>
    <fullName>Class_Reg__c</fullName>
    <description>The student who is engaging in the session.</description>
    <inlineHelpText>The student who is engaging in the session.</inlineHelpText>
    <label>Class Reg</label>
    <referenceTo>Class_Reg__c</referenceTo>
    <relationshipLabel>Session Status</relationshipLabel>
    <relationshipName>Class_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>