force-app/main/default/objects/Session_Status__c/fields/Class_Session__c.field-meta.xml
<CustomField>
    <fullName>Class_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The session which this status is reporting on.</description>
    <inlineHelpText
  >The session which this status is reporting on.</inlineHelpText>
    <label>Class Session</label>
    <referenceTo>Class_Session__c</referenceTo>
    <relationshipName>Class_Status</relationshipName>
    <type>Lookup</type>
</CustomField>