force-app/main/default/objects/Session_Status__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <description>Has the class session been completed?</description>
    <formula>Complete_Pct__c &gt;= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Has the class session been completed?</inlineHelpText>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>