force-app/main/default/objects/Session_Status__c/fields/Complete_Pct__c.field-meta.xml
<CustomField>
    <fullName>Complete_Pct__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description
  >The percentage of the student&apos;s completion of the session. (Usually the percentage of playback in the video.)</description>
    <inlineHelpText
  >The percentage of the student&apos;s completion of the session. (Usually the percentage of playback in the video.)</inlineHelpText>
    <label>Complete Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>