force-app/main/default/objects/Session_Status__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description>When the session was completed</description>
    <inlineHelpText>When the session was completed</inlineHelpText>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>