force-app/main/default/objects/Session_Status__c/fields/Status_JSON__c.field-meta.xml
<CustomField>
    <fullName>Status_JSON__c</fullName>
    <description
  >Storage of the session status data (from JS front end)</description>
    <inlineHelpText
  >Storage of the session status data (from JS front end)</inlineHelpText>
    <label>Status JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>