force-app/main/default/objects/Session_Status__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula
  >Class_Reg__r.Contact__r.FirstName &amp; &quot; &quot; &amp;  Class_Reg__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>